[package]
name = "clightningrpc"
version = "0.2.0"
authors = ["Wladimir J. van der Laan <laanwj@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/laanwj/rust-clightning-rpc"
repository = "https://github.com/laanwj/rust-clightning-rpc.git"
description = "Crate that provides an RPC binding from rust code to the c-lightning daemon"
keywords = [ "protocol", "rpc", "lightning", "bitcoin" ]
readme = "README.md"
edition = "2018"

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1.0"

futures = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = [ "full" ] }
tokio-util = { version = "0.3", features = [ "compat" ] }
futures = { version = "0.3", features = [ "io-compat" ] }
