[package]
# this module consists from code borrowed from https://github.com/hexresearch/hexstody project
name = "cln-btc-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.28.1"
bitcoin_hashes = "0.10.0"
bitcoincore-rpc = "0.15.0"
bitcoincore-rpc-json = "0.15.0"
env_logger = { version = "0.9.0" }
futures = "0.3.19"
log = "0.4.14"
nix = "0.24.1"
port-selector = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3.7"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
p256 ="0.11.1"
rand_core = { version = "0.6.3", features = ["std"] }