[package]
name = "clightningrpc-common"
version = "0.3.0-beta.2"
edition = "2021"
authors = ["Wladimir J. van der Laan <laanwj@gmail.com>", "Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/laanwj/rust-clightning-rpc"
repository = "https://github.com/laanwj/rust-clightning-rpc.git"
description = "Crate that provides an Generic RPC binding from rust code to the core lightning daemon"
keywords = [ "protocol", "rpc", "lightning", "bitcoin" ]
readme = "README.md"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"