[package]
name = "clightningrpc-conf"
version = "0.0.1"
edition = "2021"
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/laanwj/cln4rust"
repository = "https://github.com/laanwj/cln4rust.git"
description = "Crate that provides a simple configuration manager for core lightning"
keywords = [ "cln-conf-parser", "cln", "rpc", "lightning", "bitcoin" ]
readme = "README.md"

[dependencies]
albert_stream = "0.0.4"
indexmap = "1.9.2"
