[package]
name = "clightningrpc_gossip_map"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
byteorder = "1.4.3"
hex = "0.4.3"
bitcoin = { version = "0.30.0" }
fundamentals = { git = "https://github.com/lnspec-tools/ln-fundamentals.git" }
fundamentals-derive = { git = "https://github.com/lnspec-tools/ln-fundamentals.git" }
lightning = "0.0.121"

[dev-dependencies]
anyhow = "1.0.70"
colored = "1.9"
log = { version = "0.4", features = ["std"] }
chrono = { version = "0.4", features = ["std"], default-features = false }
