[package]
name = "clightningrpc-plugin"
version = "0.3.0-beta.8"
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]
edition = "2021"
description = "Crate that provides a plugin API to give the possibility to implement a plugin in Rust"
license = "CC0-1.0"
homepage = "https://github.com/laanwj/rust-clightning-rpc"
repository = "https://github.com/laanwj/rust-clightning-rpc.git"
keywords = [ "plugin", "cln", "rpc", "lightning", "bitcoin" ]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clightningrpc-common = { version = "0.3.0-beta.4" }
log = { version = "0.4.17", optional = true }

[dev-dependencies]
rstest = "0.10.0"

[features]
log = ["dep:log"]
