[package]
name = "clightningrpc-plugin-macros"
version = "0.3.0-beta.2"
edition = "2021"
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/laanwj/rust-clightning-rpc"
repository = "https://github.com/laanwj/rust-clightning-rpc.git"
description = "Crate that provides a procedural macros implementation to make easy to develop a plugin developer to build a plugin"
keywords = [ "plugin", "cln", "rpc", "lightning", "bitcoin" ]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
darling = "0.14.1"
convert_case = "0.5.0"
serde_json = "1.0"
clightningrpc-plugin = { path = "../plugin"}
#clightningrpc-plugin = "0.3.0-beta.2"

[dev-dependencies]
rstest = "0.10.0"
clightningrpc-common = { path = "../common" }
