[package]
name = "clightningrpc"
version = "0.3.0-beta.8"
authors = ["Wladimir J. van der Laan <laanwj@gmail.com>"]
license = "CC0-1.0"
homepage = "https://github.com/laanwj/rust-clightning-rpc"
repository = "https://github.com/laanwj/rust-clightning-rpc.git"
description = "Crate that provides a strong typed RPC binding from rust code to the core lightning daemon"
keywords = [ "protocol", "rpc", "lightning", "bitcoin" ]
readme = "README.md"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clightningrpc-common = { path = "../common" }

[features]
async = ["clightningrpc-common/async"]

[dev-dependencies]
rstest = "0.25.0"
uuid = { version = "1", features = ["v4"]}
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }