[package]
name = "clightning-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
clightningrpc = { path = "../rpc"  }
log = "^0.4"
tempfile = "3.6.0"
port-selector = "0.1.6"
anyhow = "1.0.71"
tokio = { version = "1.22.0", features = ["process", "time", "fs", "io-util"] }
corepc-node = "0.7.0"


[features]
async = ["clightningrpc/async"]