[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
clightning-testing = { path = "../testing" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.1"
serde_json = "1.0.1"
anyhow = "1.0.71"
rstest = "0.10.0"
uuid = { version = "0.8.2", features = ["v4"]}
